# MAIN

./: .gitignore  ALL_linux.pro  CMakeLists.txt  README.md  Vision_x64.sln
App_Vision/: CMakeLists.txt  Vision.pro
App_Vision/conf/: params_NO14.yml
App_Vision/src/: camera.cpp  frame_displayer.cpp  frame_displayer.h  frame_reader.cpp  frame_reader.h  image_processor.cpp
Vision/: CMakeLists.txt  Vision.pro  Vision.vcxproj  Vision.vcxproj.filters
Vision/conf/: params_NO14.yml
Vision/src/: Vision.pro  Vision_x64.vcxproj  camera.cpp  camera.h  camera_handle.cpp  camera_handle.h  camera_parameters.cpp  camera_parameters.h  frame_displayer.cpp  frame_displayer.h  frame_reader.cpp  frame_reader.h  image_processor.cpp  image_processor.h  main.cpp  map_calculator.cpp  map_calculator.h  terminal.cpp  terminal.h  video_processor.cpp  video_processor.h
Vision/src/def/: define.h  micro.h  micro_define.h  mtimer.cpp  mtimer.h  ptr_define.h  triple_buffer.h
Vision/src/ui/: cmd.cpp  cmd.h  control_panel.cpp  control_panel.h  ui_base.h  ui_capture.cpp  ui_capture.h  ui_control_group.cpp  ui_control_group.h  ui_control_rectify.cpp  ui_control_rectify.h  ui_enhance_gamma.cpp  ui_enhance_gamma.h  ui_enhance_group.cpp  ui_enhance_group.h  ui_enhance_guidedfilter.cpp  ui_enhance_guidedfilter.h  ui_enhance_nonuniform.cpp  ui_enhance_nonuniform.h  ui_enhance_property.cpp  ui_enhance_property.h  ui_logger.cpp  ui_logger.h  ui_processor.cpp  ui_processor.h
Vision/src/unix/: v4l2_capture.cpp  v4l2_capture.h
Vision/src/usb/: usb_camera_manager.h  usb_camera_manager_impl.cpp  usb_camera_manager_impl.h  usb_camera_parameters.h  usb_device.cpp  usb_device.h  usb_device_desc.cpp  usb_device_desc.h  usb_device_info.cpp  usb_device_info.h
lib_math/: lib_math.pro  lib_math.vcxproj
lib_utility/: lib_utility.pro  lib_utility.vcxproj
lib_vision_gpu/: CMakeLists.txt  README.md  lib_vision_gpu.pro  lib_vision_gpu.sln  lib_vision_gpu.vcxproj
lib_vision_gpu/src/: gpu_algorithm_func.h  gpu_algorithm_node_tree.cpp  gpu_algorithm_node_tree.h  gpu_algorithm_pipeline_manager.cpp  gpu_algorithm_pipeline_manager.h  lib_vision_gpu.vcxproj  lib_vision_gpu.vcxproj.filters
lib_vision_gpu/src/def/: cu_define.h  define.h
lib_vision_gpu/src/func/: func_colorspace.cu  func_colorspace.h  func_convert_image_format.cu
lib_vision_gpu/src/libvisiongpu/: gpu_algorithm_func.h  gpu_algorithm_pipeline_manager.cpp  gpu_algorithm_pipeline_manager.h
lib_vision_gpu/src/libvisiongpu/def/: cu_define.h  define.h
lib_vision_gpu/src/libvisiongpu/func/: func_convert_image_format.cu
lib_vision_gpu/src/libvisiongpu/node/: algo_node_base.cpp  algo_node_gamma.cpp  algo_node_gamma.cu  algo_node_gamma.h  algo_node_guidedfilter.cpp  algo_node_guidedfilter.cu  algo_node_guidedfilter.h  algo_node_image_adjust.cpp  algo_node_image_adjust.cu  algo_node_image_adjust.h  algo_node_nonuniform.cu
lib_vision_gpu/src/node/: algo_node_base.cpp  algo_node_base.h  algo_node_gamma.cpp  algo_node_gamma.cu  algo_node_gamma.h  algo_node_guidedfilter.cpp  algo_node_guidedfilter.cu  algo_node_guidedfilter.h  algo_node_image_adjust.cu  algo_node_image_adjust.h  algo_node_nonuniform.cpp  algo_node_nonuniform.h  algo_node_rectify.cpp  algo_node_rectify.h  algo_node_uneven_y.cpp  algo_node_uneven_y.cu  algo_node_uneven_y.h  algo_node_usm.cpp  algo_node_usm.h
lib_vision_gpu/test/: lib_vision_test.vcxproj  main.cpp
src/: gpu_algorithm_colorspace.cpp  gpu_algorithm_colorspace.cu  gpu_algorithm_colorspace.h  gpu_algorithm_func.h  gpu_algorithm_node_tree.cpp  gpu_algorithm_node_tree.h  gpu_algorithm_pipeline_manager.cpp  gpu_algorithm_pipeline_manager.h  lib_vision_gpu.cpp  lib_vision_gpu.h  lib_vision_gpu.pro  lib_vision_gpu.vcxproj  lib_vision_gpu.vcxproj.filters
test/: lib_vision_test.vcxproj  main.cpp
(+50 files in other folders)
